[gd_scene load_steps=12 format=2]

[ext_resource path="res://hud/initiative_tracker/attack_button.gd" type="Script" id=1]
[ext_resource path="res://hud/initiative_tracker/initiative_tracker.gd" type="Script" id=2]
[ext_resource path="res://hud/initiative_tracker/initiative_button.gd" type="Script" id=3]
[ext_resource path="res://hud/initiative_tracker/initiatives.gd" type="Script" id=4]
[ext_resource path="res://hud/initiative_tracker/initiative_hud.gd" type="Script" id=5]
[ext_resource path="res://hud/initiative_tracker/icons/spinning_sword.png" type="Texture" id=6]
[ext_resource path="res://hud/initiative_tracker/icons/overhead.png" type="Texture" id=7]
[ext_resource path="res://hud/initiative_tracker/player_initiatives.tscn" type="PackedScene" id=8]
[ext_resource path="res://hud/initiative_tracker/initiative_entry.tscn" type="PackedScene" id=9]
[ext_resource path="res://hud/initiative_tracker/new_round.tscn" type="PackedScene" id=10]
[ext_resource path="res://hud/initiative_tracker/initiative_20.tscn" type="PackedScene" id=11]

[node name="InitiativeTracker" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InitiativeHUD" type="HBoxContainer" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -354.0
margin_bottom = -1560.0
grow_horizontal = 0
mouse_filter = 2
size_flags_vertical = 3
custom_constants/separation = 0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="InitiativeHUD"]
margin_right = 328.0
margin_bottom = 150.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/margin_right = 16
custom_constants/margin_top = 8
custom_constants/margin_left = 16
custom_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="InitiativeHUD/MarginContainer"]
margin_left = 16.0
margin_top = 8.0
margin_right = 312.0
margin_bottom = 142.0
custom_constants/separation = 16

[node name="Done" type="Button" parent="InitiativeHUD/MarginContainer/HBoxContainer"]
margin_right = 140.0
margin_bottom = 134.0
size_flags_horizontal = 0
size_flags_vertical = 4
icon = ExtResource( 7 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
_needs_token = false

[node name="Attack" type="Button" parent="InitiativeHUD/MarginContainer/HBoxContainer"]
margin_left = 156.0
margin_right = 296.0
margin_bottom = 134.0
size_flags_horizontal = 0
size_flags_vertical = 4
icon = ExtResource( 6 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="InitiativeHUD"]
margin_left = 328.0
margin_right = 342.0
margin_bottom = 600.0
grow_horizontal = 0
size_flags_vertical = 3
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="InitiativeHUD/ScrollContainer"]
margin_right = 14.0
margin_bottom = 14.0
grow_horizontal = 0

[node name="Initiatives" type="VBoxContainer" parent="InitiativeHUD/ScrollContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 7.0
margin_bottom = 7.0
grow_horizontal = 0
custom_constants/separation = 0
script = ExtResource( 4 )
_initiative_entry_scene = ExtResource( 9 )
_initiative_20_scene = ExtResource( 11 )
_new_round_scene = ExtResource( 10 )

[node name="PlayerInitiatives" parent="." instance=ExtResource( 8 )]

[connection signal="pressed" from="InitiativeHUD/MarginContainer/HBoxContainer/Done" to="InitiativeHUD/ScrollContainer/PanelContainer/Initiatives" method="_on_done_pressed"]
[connection signal="pressed" from="InitiativeHUD/MarginContainer/HBoxContainer/Attack" to="InitiativeHUD/ScrollContainer/PanelContainer/Initiatives" method="_on_attack_pressed"]
[connection signal="initiative_changed" from="InitiativeHUD/ScrollContainer/PanelContainer/Initiatives" to="InitiativeHUD/MarginContainer/HBoxContainer/Done" method="_on_initiative_changed"]
[connection signal="initiative_changed" from="InitiativeHUD/ScrollContainer/PanelContainer/Initiatives" to="InitiativeHUD/MarginContainer/HBoxContainer/Attack" method="_on_initiative_changed"]
[connection signal="initiatives_confirmed" from="PlayerInitiatives" to="InitiativeHUD" method="_on_initiatives_confirmed"]
[connection signal="initiatives_confirmed" from="PlayerInitiatives" to="InitiativeHUD/ScrollContainer/PanelContainer/Initiatives" method="_set_up_initiative"]
