[gd_scene load_steps=10 format=2]

[ext_resource path="res://hud/initiative_tracker/icons/spinning_sword.png" type="Texture" id=1]
[ext_resource path="res://hud/initiative_tracker/initiative_entry.tscn" type="PackedScene" id=2]
[ext_resource path="res://hud/initiative_tracker/initiative_tracker.gd" type="Script" id=3]
[ext_resource path="res://hud/initiative_tracker/initiatives.gd" type="Script" id=4]
[ext_resource path="res://hud/initiative_tracker/icons/underhand.png" type="Texture" id=5]
[ext_resource path="res://hud/initiative_tracker/icons/death_skull.png" type="Texture" id=6]
[ext_resource path="res://hud/initiative_tracker/new_round.tscn" type="PackedScene" id=7]
[ext_resource path="res://hud/initiative_tracker/initiative_20.tscn" type="PackedScene" id=8]
[ext_resource path="res://hud/initiative_tracker/initiative_button.gd" type="Script" id=9]

[node name="InitiativeTracker" type="HBoxContainer"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -472.0
margin_right = 530.0
size_flags_horizontal = 0
size_flags_vertical = 8
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 14.0
margin_bottom = 472.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 7.0
margin_bottom = 465.0

[node name="Initiatives" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_bottom = 458.0
script = ExtResource( 4 )
_initiative_entry_scene = ExtResource( 2 )
_initiative_20_scene = ExtResource( 8 )
_new_round_scene = ExtResource( 7 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 18.0
margin_top = 330.0
margin_right = 502.0
margin_bottom = 472.0
size_flags_horizontal = 8
size_flags_vertical = 8
custom_constants/margin_right = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 16.0
margin_right = 468.0
margin_bottom = 134.0
custom_constants/separation = 16

[node name="Die" type="Button" parent="MarginContainer/HBoxContainer"]
margin_right = 140.0
margin_bottom = 134.0
size_flags_horizontal = 0
size_flags_vertical = 4
icon = ExtResource( 6 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attack" type="Button" parent="MarginContainer/HBoxContainer"]
margin_left = 156.0
margin_right = 296.0
margin_bottom = 134.0
size_flags_horizontal = 0
size_flags_vertical = 4
icon = ExtResource( 1 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Done" type="Button" parent="MarginContainer/HBoxContainer"]
margin_left = 312.0
margin_right = 452.0
margin_bottom = 134.0
size_flags_horizontal = 0
size_flags_vertical = 4
icon = ExtResource( 5 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
_needs_token = false

[connection signal="initiative_changed" from="PanelContainer/MarginContainer/Initiatives" to="MarginContainer/HBoxContainer/Die" method="_on_initiative_changed"]
[connection signal="initiative_changed" from="PanelContainer/MarginContainer/Initiatives" to="MarginContainer/HBoxContainer/Attack" method="_on_initiative_changed"]
[connection signal="initiative_changed" from="PanelContainer/MarginContainer/Initiatives" to="MarginContainer/HBoxContainer/Done" method="_on_initiative_changed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Die" to="PanelContainer/MarginContainer/Initiatives" method="_on_die_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Done" to="PanelContainer/MarginContainer/Initiatives" method="_on_done_pressed"]
